--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
@@ -9,28 +9,38 @@
     Это был первый «кирпич» в здание будущего акционерного общества. Основная задача, которая была поставлена перед
     ООО «Геологические технологии» была задача развития направлений деятельности, которые должны быть положены в будущее
     Акционерное Общество «СИБГЕОТЕХ». Для этого в ООО «Геологические технологии» создавались и успешно начали работу
-    такие направления как: Поиски и разведка МПИ, Инженерно-геологические исследования, Проектирование горных производств,
-    Маркшейдерские и геодезические работы, Экологические исследования. Для развития направлений подбирались специалисты любящие
+    такие направления как: Поиски и разведка МПИ, Инженерно-геологические исследования, Проектирование горных
+    производств,
+    Маркшейдерские и геодезические работы, Экологические исследования. Для развития направлений подбирались специалисты
+    любящие
     свою профессию, готовые творчески и напряженно работать, учиться.
   </p>
   <p>
-    К 2014 году видовое разнообразие работ расширилось настолько, что возникла необходимость для каждого направления работ создать
-    свое отдельное подразделение или предприятие. Для этого было зарегистрировано ООО «ГЕОТЕХНОЛОГИИ». С этого момента работы собственного
-    геологического, маркшейдерского и экологического  содержания стали специализацией ООО «ГЕОТЕХНОЛОГИИ», а работы связанные с
-    инженерно-геологическими исследованиями и проектированием горных предприятий специализацией ООО «Геологические технологии».
+    К 2014 году видовое разнообразие работ расширилось настолько, что возникла необходимость для каждого направления
+    работ создать
+    свое отдельное подразделение или предприятие. Для этого было зарегистрировано ООО «ГЕОТЕХНОЛОГИИ». С этого момента
+    работы собственного
+    геологического, маркшейдерского и экологического содержания стали специализацией ООО «ГЕОТЕХНОЛОГИИ», а работы
+    связанные с
+    инженерно-геологическими исследованиями и проектированием горных предприятий специализацией ООО «Геологические
+    технологии».
   </p>
   <p>
-    В 2015-2016 годах количество работ экологического направления стало увеличиваться, что привело к необходимости создания
+    В 2015-2016 годах количество работ экологического направления стало увеличиваться, что привело к необходимости
+    создания
     самостоятельного предприятия ООО «Экологические технологии». Работа над этим уже началась.
   </p>
   <p>
-    К 2017 году отчетливо выкристаллизовалась необходимость в самостоятельном развитии направлений «Проектирование горных
+    К 2017 году отчетливо выкристаллизовалась необходимость в самостоятельном развитии направлений «Проектирование
+    горных
     предприятий» и «Добыча полезных ископаемых».
   </p>
   <p>
     Таким образом, идея создания современной юниорной компании получила осязаемость. К 2017 году были в наличии:
-    высокопрофессиональные кадры, наработанные портфели заказов по основным направлениям, материальная и административная база,
-    определенный положительный имидж предприятий. Были разработаны стратегия развития компании, определены задачи ее деятельности
+    высокопрофессиональные кадры, наработанные портфели заказов по основным направлениям, материальная и
+    административная база,
+    определенный положительный имидж предприятий. Были разработаны стратегия развития компании, определены задачи ее
+    деятельности
     на краткосрочную и долгосрочную перспективу.
   </p>
   <p>
