--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
@@ -1,5 +1,5 @@
 <div class="common-text">
-    <h1>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</h1>
+  <h1>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</h1>
 
   <ol>
     <li>
@@ -12,7 +12,8 @@
       </ol>
     </li>
     <li>
-      Инженерно-геологические изыскания для строительства объектов гражданского и промышленного строительства, в том числе высокого уровня ответственности, включая:
+      Инженерно-геологические изыскания для строительства объектов гражданского и промышленного строительства, в том
+      числе высокого уровня ответственности, включая:
       <ol>
         <li>инженерно-геологическая и гидрогеологическая съемки;</li>
         <li>
@@ -28,7 +29,9 @@
           кустовые, одиночные, групповые, <q>экспресс</q>- откачки воды из скважин, в том числе:
           <ol>- опытные выпуски воды из фонтанирующих скважин;</ol>
           <ol>- опытные наливы воды в скважины и шурфы;</ol>
-          <ol>-  опытные нагнетания воды в скважины, в том числе с использованием оригинальных тампонов разжимного действия, с использование двойного пневмотампона;</ol>
+          <ol>- опытные нагнетания воды в скважины, в том числе с использованием оригинальных тампонов разжимного
+            действия, с использование двойного пневмотампона;
+          </ol>
         </li>
         <li>Лабораторные исследования грунтов</li>
       </ol>
