copyright position fix

--- a/GeoApp/ClientApp/src/app/app.component.css
+++ b/GeoApp/ClientApp/src/app/app.component.css
@@ -49,7 +49,8 @@ mat-toolbar.mat-toolbar mat-toolbar-row {
 }
 
 .app-sidenav-content {
-  padding: 80px 48px 16px 48px;
+  padding: 80px 48px 0 48px;
+  min-height: calc(100% - 80px - 20px - 40px); /* 80px - верхний паддинг, 20px - просвет, 40px - высота копирайта*/
 }
 
 a {
@@ -65,11 +66,11 @@ a {
 }
 
 .app-copyright {
-  position: absolute;
   width: 100%;
   color: #fff;
   line-height: 40px;
   font-size: 0.7em;
   text-align: center;
   bottom: 0;
+  margin: 0;
 }
