--- a/GeoApp/ClientApp/src/app/user/components/projects/project-item/project-item.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/projects/project-item/project-item.component.html
@@ -1,2 +1,3 @@
+<button mat-raised-button color="primary" routerLink="/projects">Назад</button>
 <p>{{projectText}}</p>
 <app-gallery [galleryOptions]="galleryOptions" [galleryImages]="galleryImages"></app-gallery>
