--- a/GeoApp/ClientApp/src/app/app.component.html
+++ b/GeoApp/ClientApp/src/app/app.component.html
@@ -31,12 +31,14 @@
       class="app-sidenav">
       <mat-list>
         <mat-list-item *ngFor="let item of sideNavItems;">
-          <button
-            mat-button
-            color="primary"
-            [routerLink]="item.link"
-            (click)="sidenav.toggle()">{{item.name}}
-          </button>
+          <div class="app-menu-list-item">
+            <button
+              mat-button
+              color="primary"
+              [routerLink]="item.link"
+              (click)="sidenav.toggle()">{{item.name}}
+            </button>
+          </div>
         </mat-list-item>
       </mat-list>
     </mat-sidenav>
