final fix. Gallery no longer shows under top toolbar

--- a/GeoApp/ClientApp/src/app/app.component.css
+++ b/GeoApp/ClientApp/src/app/app.component.css
@@ -1,109 +1,9 @@
-.app-menu-button {
-  margin: 0 5px 0 0;
-  padding: 0;
-  height: 100%;
-}
-
-.mat-toolbar-row {
-  height: 70px;
-}
-
-.app-nav-company-main-name {
-  font-size: 28px;
-}
-
-.app-main-logo {
-  margin: 0 70px;
-}
-
-.app-nav-company-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.app-nav-company-add-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.app-nav-company-add-name {
-  top: 40px;
+app-courusel {
   position: absolute;
-  font-size: 10px;
-  letter-spacing: 3px;
-}
-
-.app-sidenav-container {
-  //position: absolute;
-  //top: 0;
-  min-height: 100% !important;
-  height: 100%;
+  z-index: -10;
   width: 100%;
 }
 
-/*
-.mat-toolbar {
-  position: fixed;
-  z-index: 10;
-}
-*/
-
-mat-sidenav.mat-sidenav {
-  //padding-top: 20px;
-  //top: 70px;
-  //background-color: rgba(256, 256, 256, .8);
-  box-shadow: 6px 0 6px rgba(0, 0, 0, .1);
-}
-
-/*
-mat-sidenav.mat-sidenav button {
-  font-family: "Arial Black", Arial, sans-serif;
-  font-weight: 900;
-}
-*/
-
-mat-toolbar.mat-toolbar mat-toolbar-row {
-  padding: 0 16px 0 0;
-}
-
-.app-sidenav-content {
-  //padding: 80px 48px 0 48px;
-  min-height: calc(100% - 20px - 40px); /* 80px - верхний паддинг, 20px - просвет, 40px - высота копирайта*/
-}
-
-/*
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-*/
-
-.toolbar-logo {
-  height: 60px;
-  margin-top: 10px;
-  margin-right: 10px;
-  width: auto
-}
-
-.app-copyright {
-  width: 100%;
-  color: #fff;
-  line-height: 40px;
-  font-size: 0.7em;
-  text-align: center;
-  bottom: 0;
-  margin: 0;
-}
-
-.app-menu-list-item {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.mat-drawer-container {
-  font-family: "Arial", Arial, sans-serif;
-  font-weight: 700;
+div {
+  height: 100vh;
 }
